--- a/index.html
+++ b/index.html
@@ -9,132 +9,349 @@
     <script defer src="./index.js"></script>
   </head>
   <body>
-    <a class="btnGo" href="https://timepedia.io/" target="_blank" disabled
-      >Go</a
-    >
     <div class="tools" id="when-date">
-      <div class="__select__content">
-        <input id="singleSelect-day-0" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-0" class="__select__label">1 th</label>
-        <input id="singleSelect-day-1" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-1" class="__select__label">2 th</label>
-        <input id="singleSelect-day-2" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-2" class="__select__label">3 th</label>
-        <input id="singleSelect-day-3" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-3" class="__select__label">4 th</label>
-        <input id="singleSelect-day-4" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-4" class="__select__label">5 th</label>
-        <input id="singleSelect-day-5" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-5" class="__select__label">6 th</label>
-        <input id="singleSelect-day-6" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-6" class="__select__label">7 th</label>
-        <input id="singleSelect-day-7" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-7" class="__select__label">8 th</label>
-        <input id="singleSelect-day-8" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-8" class="__select__label">9 th</label>
-        <input id="singleSelect-day-9" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-9" class="__select__label">10 th</label>
-        <input id="singleSelect-day-10" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-10" class="__select__label">11 th</label>
-        <input id="singleSelect-day-11" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-11" class="__select__label">12 th</label>
-        <input id="singleSelect-day-12" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-12" class="__select__label">13 th</label>
-        <input id="singleSelect-day-13" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-13" class="__select__label">14 th</label>
-        <input id="singleSelect-day-14" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-14" class="__select__label">15 th</label>
-        <input id="singleSelect-day-15" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-15" class="__select__label">16 th</label>
-        <input id="singleSelect-day-16" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-16" class="__select__label">17 th</label>
-        <input id="singleSelect-day-17" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-17" class="__select__label">18 th</label>
-        <input id="singleSelect-day-18" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-18" class="__select__label">19 th</label>
-        <input id="singleSelect-day-19" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-19" class="__select__label">20 th</label>
-        <input id="singleSelect-day-20" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-20" class="__select__label">21 th</label>
-        <input id="singleSelect-day-21" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-21" class="__select__label">22 th</label>
-        <input id="singleSelect-day-22" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-22" class="__select__label">23 th</label>
-        <input id="singleSelect-day-23" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-23" class="__select__label">24 th</label>
-        <input id="singleSelect-day-24" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-24" class="__select__label">25 th</label>
-        <input id="singleSelect-day-25" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-25" class="__select__label">26 th</label>
-        <input id="singleSelect-day-26" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-26" class="__select__label">27 th</label>
-        <input id="singleSelect-day-27" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-27" class="__select__label">28 th</label>
-        <input id="singleSelect-day-28" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-28" class="__select__label">29 th</label>
-        <input id="singleSelect-day-29" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-29" class="__select__label">30 th</label>
-        <input id="singleSelect-day-30" type="radio" name="when-date-day" />
-        <label for="singleSelect-day-30" class="__select__label">31 th</label>
-      </div>
-      <div class="__select__content">
-        <input
-          id="singleSelect-weekday-0"
-          type="radio"
-          name="when-date-weekday"
-        />
-        <label for="singleSelect-weekday-0" class="__select__label"
-          >Monday</label
-        >
-        <input
-          id="singleSelect-weekday-1"
-          type="radio"
-          name="when-date-weekday"
-        />
-        <label for="singleSelect-weekday-1" class="__select__label"
-          >Tuesday</label
-        >
-        <input
-          id="singleSelect-weekday-2"
-          type="radio"
-          name="when-date-weekday"
-        />
-        <label for="singleSelect-weekday-2" class="__select__label"
-          >Wednesday</label
-        >
-        <input
-          id="singleSelect-weekday-3"
-          type="radio"
-          name="when-date-weekday"
-        />
-        <label for="singleSelect-weekday-3" class="__select__label"
-          >Thursday</label
-        >
-        <input
-          id="singleSelect-weekday-4"
-          type="radio"
-          name="when-date-weekday"
-        />
-        <label for="singleSelect-weekday-4" class="__select__label"
-          >Friday</label
-        >
-        <input
-          id="singleSelect-weekday-5"
-          type="radio"
-          name="when-date-weekday"
-        />
-        <label for="singleSelect-weekday-5" class="__select__label"
-          >Saturday</label
-        >
-        <input
-          id="singleSelect-weekday-6"
-          type="radio"
-          name="when-date-weekday"
-        />
-        <label for="singleSelect-weekday-6" class="__select__label"
-          >Sunday</label
-        >
-      </div>
+      <form>
+        <div class="__select" data-state="">
+          <div class="__select__title" data-default="15 th">15 th</div>
+          <div class="__select__content">
+            <input
+              id="singleSelect-day-0"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-0" class="__select__label">1 th</label>
+            <input
+              id="singleSelect-day-1"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-1" class="__select__label">2 th</label>
+            <input
+              id="singleSelect-day-2"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-2" class="__select__label">3 th</label>
+            <input
+              id="singleSelect-day-3"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-3" class="__select__label">4 th</label>
+            <input
+              id="singleSelect-day-4"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-4" class="__select__label">5 th</label>
+            <input
+              id="singleSelect-day-5"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-5" class="__select__label">6 th</label>
+            <input
+              id="singleSelect-day-6"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-6" class="__select__label">7 th</label>
+            <input
+              id="singleSelect-day-7"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-7" class="__select__label">8 th</label>
+            <input
+              id="singleSelect-day-8"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-8" class="__select__label">9 th</label>
+            <input
+              id="singleSelect-day-9"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-9" class="__select__label"
+              >10 th</label
+            >
+            <input
+              id="singleSelect-day-10"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-10" class="__select__label"
+              >11 th</label
+            >
+            <input
+              id="singleSelect-day-11"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-11" class="__select__label"
+              >12 th</label
+            >
+            <input
+              id="singleSelect-day-12"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-12" class="__select__label"
+              >13 th</label
+            >
+            <input
+              id="singleSelect-day-13"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-13" class="__select__label"
+              >14 th</label
+            >
+            <input
+              id="singleSelect-day-14"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+              checked=""
+            />
+            <label for="singleSelect-day-14" class="__select__label"
+              >15 th</label
+            >
+            <input
+              id="singleSelect-day-15"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-15" class="__select__label"
+              >16 th</label
+            >
+            <input
+              id="singleSelect-day-16"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-16" class="__select__label"
+              >17 th</label
+            >
+            <input
+              id="singleSelect-day-17"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-17" class="__select__label"
+              >18 th</label
+            >
+            <input
+              id="singleSelect-day-18"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-18" class="__select__label"
+              >19 th</label
+            >
+            <input
+              id="singleSelect-day-19"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-19" class="__select__label"
+              >20 th</label
+            >
+            <input
+              id="singleSelect-day-20"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-20" class="__select__label"
+              >21 th</label
+            >
+            <input
+              id="singleSelect-day-21"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-21" class="__select__label"
+              >22 th</label
+            >
+            <input
+              id="singleSelect-day-22"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-22" class="__select__label"
+              >23 th</label
+            >
+            <input
+              id="singleSelect-day-23"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-23" class="__select__label"
+              >24 th</label
+            >
+            <input
+              id="singleSelect-day-24"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-24" class="__select__label"
+              >25 th</label
+            >
+            <input
+              id="singleSelect-day-25"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-25" class="__select__label"
+              >26 th</label
+            >
+            <input
+              id="singleSelect-day-26"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-26" class="__select__label"
+              >27 th</label
+            >
+            <input
+              id="singleSelect-day-27"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-27" class="__select__label"
+              >28 th</label
+            >
+            <input
+              id="singleSelect-day-28"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-28" class="__select__label"
+              >29 th</label
+            >
+            <input
+              id="singleSelect-day-29"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-29" class="__select__label"
+              >30 th</label
+            >
+            <input
+              id="singleSelect-day-30"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-day"
+            />
+            <label for="singleSelect-day-30" class="__select__label"
+              >31 th</label
+            >
+          </div>
+        </div>
+      </form>
+      <form>
+        <div class="__select" data-state="">
+          <div class="__select__title" data-default="Wednesday">Wednesday</div>
+          <div class="__select__content">
+            <input
+              id="singleSelect-weekday-0"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-weekday"
+            />
+            <label for="singleSelect-weekday-0" class="__select__label"
+              >Monday</label
+            >
+            <input
+              id="singleSelect-weekday-1"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-weekday"
+            />
+            <label for="singleSelect-weekday-1" class="__select__label"
+              >Tuesday</label
+            >
+            <input
+              id="singleSelect-weekday-2"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-weekday"
+              checked=""
+            />
+            <label for="singleSelect-weekday-2" class="__select__label"
+              >Wednesday</label
+            >
+            <input
+              id="singleSelect-weekday-3"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-weekday"
+            />
+            <label for="singleSelect-weekday-3" class="__select__label"
+              >Thursday</label
+            >
+            <input
+              id="singleSelect-weekday-4"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-weekday"
+            />
+            <label for="singleSelect-weekday-4" class="__select__label"
+              >Friday</label
+            >
+            <input
+              id="singleSelect-weekday-5"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-weekday"
+            />
+            <label for="singleSelect-weekday-5" class="__select__label"
+              >Saturday</label
+            >
+            <input
+              id="singleSelect-weekday-6"
+              class="__select__input"
+              type="radio"
+              name="singleSelect-weekday"
+            />
+            <label for="singleSelect-weekday-6" class="__select__label"
+              >Sunday</label
+            >
+          </div>
+        </div>
+      </form>
+
+      <button class="btnGo">Go!</button>
     </div>
   </body>
 </html>
